Fix undefined pdfPath error in select-category route

--- a/views/revision-pdf.ejs
+++ b/views/revision-pdf.ejs
@@ -19,7 +19,7 @@
 
     <div class="content">
       <a href="javascript:history.back()" class="back-button">Back</a>
-    <h1 class="main-title">Week <%= week %> Revision</h1>
+    <h1 class="main-title">Scriptural <%= week %> Discourse</h1>
     <p class="subtitle">
       Dear <%= gender === "male" ? "Brother" : "Sister" %> <%= name %>, please go through the material below carefully. You can also download by clicking the download button below.
     </p>
