--- a/views/select-category.ejs
+++ b/views/select-category.ejs
@@ -37,6 +37,7 @@
           <label class="form-label" for="category">Select Category</label>
           <select name="category" id="category" class="form-input" required>
             <option value=""> Choose a Category </option>
+            <option value="Scriptural">May 18, SD</option>
             <option value="Exercise">Exercise</option>
             <option value="Memory Verse">Memory Verse</option>
             <option value="Questions & Answer">Questions & Answer</option>
